generate executable jar file
1.generate executable.jar
2.update readme to instruct how to run the jar file
3.add screenshots of my running program